tdf#126680 invert RTL horizontal scrolling

Originally I broke this, as this needs adaption of all VCL backends
to fix the use case of non-RTL documents inside RTL UI and correct
scrollbar behaviour.

So this is just a little helper, which will fix the default non-RTL
UI case. Probably a real revert for the change would be better...

Change-Id: I9967a0d7e75dcb99f8465e9eecf81afe2d351064